[tool.poetry]
name = "proxy-test"
version = "0.1.0"
description = ""
authors = ["Daisuke Arai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
build = "^0.10.0"
tinydb = "^4.7.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
